[package]
name = "twhook"
version = "0.1.0"
edition = "2021"

[lib]
name = "twhook"
path = "src/lib.rs"
crate-type = ["cdylib"]

[[bin]]
name = "twhookrun"
path = "src/main.rs"

[dependencies]
ctor = "0.2.4"
dll-syringe = "0.15.2"
retour = "0.3.1"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
windows = { version ="0.51.1", features=["Win32_System_LibraryLoader", "Win32_Foundation", "Win32_UI_WindowsAndMessaging"]}
ilhook = "2"